# Ahasis_shared_task

./: .gitignore  .pre-commit-config.yaml  evaluate.ipynb  evaluate.py  explore_data.ipynb  hello.py  inference.py  inference_dev.py  inference_test.py  llm.py  prepare_submission.py  pyproject.toml  split_data.ipynb  tf-idf.ipynb  utils.py  xml_parser.py
prompts/: p1.py  p2.py  p3.py  p4.py
